[gd_scene load_steps=2 format=3 uid="uid://bokffah8uv0a8"]

[ext_resource type="Script" uid="uid://uaslppv7xe55" path="res://scripts/windows/confirmation_window_controller.gd" id="1_stcx2"]

[node name="ConfirmationWindowWND" type="Window"]
title = "PLACEHOLDER_TTL"
initial_position = 1
size = Vector2i(600, 100)
script = ExtResource("1_stcx2")

[node name="MainUIVBC" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConfirmationMsgRTL" type="RichTextLabel" parent="MainUIVBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "PLACEHOLDER_TEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlBtnsHBC" type="HBoxContainer" parent="MainUIVBC"]
layout_mode = 2

[node name="NoBTN" type="Button" parent="MainUIVBC/ControlBtnsHBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "NO_BTN"

[node name="YesBTN" type="Button" parent="MainUIVBC/ControlBtnsHBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "YES_BTN"
